--- a/_sass/components/_nav.scss
+++ b/_sass/components/_nav.scss
@@ -27,8 +27,8 @@
 .nav--main__item a {
   text-decoration: none;
   display: block;
-  height: $baseline-height * 3;
-  line-height: $line-height * 3;
+  height: $baseline-height * 2;
+  line-height: $line-height * 2;
   padding-left: $padding * 2;
   color: $primary-text-color;
   font-weight: 300;
